Cherry-pick : 2b29763 : Change path hover to d3-tip; fix flicker; frontend/  98f38f6 218942 Nov 23 17:46  app/components/draw-map.js  6e04779  15665 Nov 23 17:46  app/styles/app.css  79b0772    762 Nov 23 17:51  bower.json  509cc80   1751 Nov 23 17:46  ember-cli-build.js

--- a/frontend/app/styles/app.css
+++ b/frontend/app/styles/app.css
@@ -443,14 +443,24 @@ path.syntenyEdge.inverted
 /* Tool tip */
 div.highlightMarker,
 div.toolTip{
-  position:absolute;
-  text-align: lift;
-  padding: 2px;
+  /* seems based on https://github.com/Caged/d3-tip/blob/master/examples/example-styles.css */
+  /* position:absolute; */  /* overridden by d3-tip */
+  text-align: left;
+  padding: 0.5em;
   font: 12px sans-serif;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  border: 0px;
-  border-radius: 2px;
+  background: rgba(255, 255, 255, 0.8); /* dark theme: rgba(0, 0, 0, 0.8) */
+  color: #000; /*dark theme:  #fff */
+  border: 1px solid lightgrey;
+  border-radius: 0.6em;
+}
+/* from: https://github.com/Caged/d3-tip/blob/master/examples/example-styles.css */
+/* Northward tooltips */
+.d3-tip.n:after {
+  content: "\25BC";
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+  text-align: center;
 }
 
 div.highlightMarker
